--- a/css/AdmKim.css
+++ b/css/AdmKim.css
@@ -1,81 +1,88 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    width: 100vw;
     height: 100vh;
     background-image: url('../img/AFPESP_BACK.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
+    font-family: 'sans-serif';
 }
 
 .header-principal{
     background-color: #28ac0b;
-    height: 60px;
-    width: 100%;
-    position: relative;
     display: flex;
-    justify-content: center;
-    justify-items: center;
+    justify-content: space-between;
     align-items: center;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 8%;
 }
 
-.logoColaboradores{
-    /*position: absolute;*/
+.logo img{
     width: 45px;
     height: 45px;
-    margin: 0 20px;
-    /*top: 5px;
-    left: 5px;*/
+    margin: 0 0 0 10px;
 }
 
 .titulo{
     color: white;
-    font-size: 2em;
-    padding: 0;
+    font-size: 1.1rem;
+    margin: 0 auto;
+}
+
+.container{
+    width: 100%;
+    height: 90vh;
     margin: 0;
-    /*display: block;
-    position: absolute;
-    top: 10px;
-    left: 60px;*/
+    padding: 0;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
 }
 
 .lista{
-    margin: 10% auto;
-    display: flex;
-    justify-content: center;
-    justify-items: center;
-    width: 80%;
+    display: block;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+    width: auto;
     border: 2px solid rgba(0, 0, 0, 0.616);
-    height: 180px;
-    background-color: rgba(255, 255, 255, 0.445);
+    background-color: rgba(255, 255, 255, 0.76);
     border-radius: 25px;
 }
 
-.lista a{
-    text-decoration: none;
-    color: black;
-}
-.lista a:hover{
-    color: red;
-    background-color: rgba(255, 255, 0, 0.863);
+.lista ul {
+    /*list-style: none;*/
+    font-size: 1.2rem;  
 }
 
-.lista li{
-    /*list-style: none;*/
-    margin: 10px;
-    font-size: 20px;
+.lista ul li {
+    width: 100%;
+}
+
+.lista ul li a{
+    text-decoration: none;
+    color: black;  
+}
+
+.lista ul li a:hover{
+    background-color: aqua;
+    border-radius: 5px;  
 }
 
 footer{
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    font-size: 15px;
-    text-align: center;
     position: absolute;
-    bottom: 0px;
+    display: block;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 1rem;
+    width: 100%;
     background-color: #28ac0b;
-    height: 40px;
-    /*width: 100%;*/
+    color: white;
 }
